Rename the project

--- a/_config.yml
+++ b/_config.yml
@@ -58,6 +58,12 @@ aux_links:
 
 # External navigation links
 nav_external_links:
+
+  - title: Live Example
+    url: /live/index.html
+    hide_icon: false # set to true to hide the external link icon - defaults to false
+    opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
+
   - title: Repository
     url: https://github.com/canardoux/flutter_sound
     hide_icon: false # set to true to hide the external link icon - defaults to false
