--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ aux_links:
 nav_external_links:
 
   - title: Live Example
-    url: /live/index.html
+    url: https://fs-doc.vercel.app/live/index.html
     hide_icon: false # set to true to hide the external link icon - defaults to false
     opens_in_new_tab: false # set to true to open this link in a new tab - defaults to false
 
